[gd_scene load_steps=4 format=3 uid="uid://7hpd42fr1nlw"]

[ext_resource type="Script" path="res://FX/Water/water_body.gd" id="1_pe2ah"]

[sub_resource type="Shader" id="Shader_i7bs5"]
code = "shader_type canvas_item;

uniform vec4 tint : source_color = vec4(1.0);
uniform sampler2D SCREEN_TEXTURE : hint_screen_texture, filter_linear_mipmap;

void fragment() {
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV);
	
	color = mix(color, tint, 0.6);
	color = mix(vec4(0.5), color, 1.4);
	COLOR = color;
	
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wmqgg"]
shader = SubResource("Shader_i7bs5")
shader_parameter/tint = Color(0.211765, 0.419608, 0.298039, 1)

[node name="WaterBody" type="Node2D"]
self_modulate = Color(1, 1, 1, 0)
script = ExtResource("1_pe2ah")

[node name="WaterPolygon" type="Polygon2D" parent="."]
material = SubResource("ShaderMaterial_wmqgg")

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
